--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/lscambo13/casamia-backend/issues"
   },
-  "homepage": "https://github.com/lscambo13/casamia-backend#readme"
+  "homepage": "https://github.com/lscambo13/casamia-backend#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
