--- a/.gitignore
+++ b/.gitignore
@@ -720,3 +720,4 @@ node_modules/vary/index.js
 node_modules/vary/LICENSE
 node_modules/vary/package.json
 node_modules/vary/README.md
+bin/yt-dlp.exe
