--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+	"push": "git push && sshgo \" sudo ./deploy.sh casamia \" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
