--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-	"push": "git push && sshgo \" sudo ./deploy.sh casamia \" ",
+    "dev": "npx nodemon server.js",
+	  "push": "git push && sshgo \" sudo ./deploy.sh casamia \" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
